--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -12,24 +12,22 @@
     <div class="grid grid-cols-6">
         <div class="col-start-3 col-span-2">
             <h6 class="py-4">Signup as a new user</h6>
-            <form action="/users" method="post">
+            <form action="/Admin" method="post">
                 <div class="py-3">
-                    <label for="firstName">Username:</label>
-                    <input type="text" name="Username" class="border border-gray-300 text-black-300 rounded p-2 w-full">
+                    <label for="userName">Username:</label>
+                    <input type="text" name="userName" id="userName" class="border border-gray-300 text-black-300 rounded p-2 w-full">
                 </div>
                 <div class="py-3">
                     <label for="email">Email:</label>
-                    <input type="email" name="email" class="border border-gray-300 text-black-300 rounded p-2 w-full">
+                    <input type="email" name="email" id="email" class="border border-gray-300 text-black-300 rounded p-2 w-full">
                 </div>
                 <div class="py-3">
                     <label for="password">Password:</label>
-                    <input type="password" name="password" class="border border-gray-300 text-black-300 rounded p-2 w-full">
+                    <input type="password" name="password"  email=password class="border border-gray-300 text-black-300 rounded p-2 w-full">
                 </div>
                 <div class="py-3">
                     <button type="submit" class="text-white bg-green-600 hover:bg-green-800 font-medium rounded px-5 py-2">Sign up</button>
                 </div>
-               
-
             </form>
     </div>
     </div>
