--- a/views/elections.ejs
+++ b/views/elections.ejs
@@ -12,6 +12,10 @@
 
 <body>
     <div class="grid grid-cols-6">
+        <div class="col-start-6">
+            <a href="/signout"
+                class="underline text-purple-900 hover:text-blue-300  visited:text-purple-600">Signout</a>
+        </div>
         <div class="col-start-3 col-span-2">
             <form action="/elections" method="post">
                 <input type="hidden" name="_csrf" value="<%=csrfToken %>" />
@@ -23,12 +27,14 @@
                         <input
                             class="appearance-none bg-transparent border  border-gray-400  rounded w-full text-gray-700 mr-3 py-4 px-3  leading-tight focus:outline-none"
                             type="text" placeholder="Election Name" name="electioname" aria-label="Full name">
-                        <div class="flex-none">
+                        <div class="flex-auto">
                             <button type="submit"
                                 class="flex-shrink-0 bg-teal-500 hover:bg-teal-700 border-teal-500 hover:border-teal-700 text-sm border-4 text-white py-1 px-2 rounded">Create
                                 Election</button>
+                            <br>
                         </div>
                     </div>
+
                 </div>
             </form>
         </div>
