--- a/views/election.ejs
+++ b/views/election.ejs
@@ -19,11 +19,10 @@
 
             <div>
                 <div>
-                    <a href="/new" class="underline text-purple-900 text-4xl hover:text-blue-300  text-3xl visited:text-purple-600">Create a New Election</a>
-                    <%- include('elections.ejs', {title: "Elections which are created but not launched" , data:
-                        getElections}) %>
-                        <%- include('elections.ejs', {title: "Elections which are running" , data: ongoingElections })
-                            %>
+                    <p class="py-2 text-4xl text-blue-700"><%= title %> <%= loggedInUser %></p>
+                    <a href="/newelection" class="underline text-purple-900 text-2xl hover:text-blue-300  text-3xl visited:text-purple-600">Create a New Election</a>
+                    <%- include('elections.ejs', { title: "Elections which are created but not launched" , data: getElections}) %>
+                        <%- include('elections.ejs', {title: "Elections which are running" , data: ongoingElections }) %>
                             <%- include('elections.ejs', {title: "Elections which are completed" , data: completedElections}) %>
                 </div>
             </div>
