--- a/views/elections.ejs
+++ b/views/elections.ejs
@@ -25,13 +25,16 @@
                 <% for(var i=0; i<data.length; i++) {%>
                     <li class="Todo-Item">
                         <div class="flex items-center w-fit my-2 px-2 py-1 rounded hover:bg-purple-50">
-                            <input id="todo-checkbox-<%= ongoing[i].id %>"
-                                class="w-4 h-4 text-blue-600 bg-gray-100 rounded border-gray-300" type="checkbox">
                             <label for="todo-checkbox-<%= data[i].id %>"
                                 class="ml-2 text-sm text-gray-600 cursor-pointer">
                                 <%= data[i].name %>
                             </label>
-                            <a href="#" class="hidden trash-icon ml-2">
+                            <a href"#" class="hidden edit-icon ml-2"></a>
+                                <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
+                                    <path stroke-linecap="round" stroke-linejoin="round" d="M16.862 4.487l1.687-1.688a1.875 1.875 0 112.652 2.652L6.832 19.82a4.5 4.5 0 01-1.897 1.13l-2.685.8.8-2.685a4.5 4.5 0 011.13-1.897L16.863 4.487zm0 0L19.5 7.125" />
+                                    </svg>
+                            </a>
+                            <a href="#" class="hidden trash-icon ml-2" >
                                 <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
                                     stroke-width="1.5" stroke="currentColor" class="w-4 h-4">
                                     <path stroke-linecap="round" stroke-linejoin="round"
