--- a/views/electionnew.ejs
+++ b/views/electionnew.ejs
@@ -14,7 +14,7 @@
     <div class="grid grid-cols-6">
         <div class="col-start-3 col-span-2">
             <h6 class="py-4 text-4xl font-bold">Create New Election</h6>
-            <form action="/newelection" method="post">
+            <form action="/elections/new" method="post">
                 <input type="hidden" name="_csrf" value="<%=csrfToken %>" />
                 <div class="py-3">
                     <label>Election's name?</label>
