--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -28,7 +28,7 @@
                     <input type="password" name="password"  email=password class="border border-gray-300 text-black-300 rounded p-2 w-full">
                 </div>
                 <div class="py-3">
-                    <button type="submit" class="text-white bg-green-600 hover:bg-green-800 font-medium rounded px-5 py-2">Sign up</button>
+                    <button type="submit" class="text-white bg-black-600 hover:bg-green-800 font-medium rounded px-5 py-2">Sign up</button>
                 </div>
             </form>
     </div>
