--- a/views/electionpreview.ejs
+++ b/views/electionpreview.ejs
@@ -14,10 +14,11 @@
     <div class="grid grid-cols-6">
         <div class="col-start-3 col-span-2">
             <div class="flex-auto">
-            <a href="/elections/questions/new" class="underline text-purple-900 text-2xl hover:text-blue-300  text-3xl visited:text-purple-600">Create a question</a>
+        <a href="/elections/<%- eid %>/questions/new" class="underline text-purple-900 text-2xl hover:text-blue-300  text-3xl visited:text-purple-600">Create a question</a>
             </div>
             <div class="flex-none">
-                <%- include('electionlist.ejs', { title: "Elections which are created but not launched" , ques:ques}) %>
+                <%= ques %>
+                <%- include('electionlist.ejs', { title: "Elections which are created but not launched", ques:ques }) %>
             </div>
         </div>
     </div>
