Added featture of creating a new question

--- a/views/createquestion.ejs
+++ b/views/createquestion.ejs
@@ -22,7 +22,7 @@
 
          <div class="mb-5">
            <label for="decripton" class="block mb-2 font-bold text-gray-600">Description</label>
-           <input type="textarea" id="descripton" name="descripton" placeholder="Give description to th equestion" class="border border-red-300 shadow p-3 w-full rounded mb-">
+           <input type="textarea" id="description" name="description" placeholder="Give description to th equestion" class="border border-red-300 shadow p-3 w-full rounded mb-">
          </div>
 
          <button class="block w-full bg-blue-500 text-white font-bold p-4 rounded-lg">Submit</button>
