--- a/views/electionlist.ejs
+++ b/views/electionlist.ejs
@@ -1,7 +1,7 @@
 <div class="grid grid-cols-6">
     <div class="col-start-3 col-span-4">
-        <h5>
-            Manage questions <span
+        <h5 class=" text-3xl">
+            Managing questions <span
                     class="bg-gray-100 text-gray-800 text-sm font-small mr-2 px-2.5 py-0.5 rounded dark:bg-gray-200 dark:text-gray-900 justify-center items-center items">
                     <%= ques.length %>
                 </span>
@@ -10,16 +10,20 @@
             <% for(var i=0; i<ques.length; i++) {%>
                 <li class="Todo-Item">
                     <div class="flex items-center w-fit h-9 my-2 px-2 py-1 rounded hover:bg-purple-50">
+                        <div>
                         <label for="todo-checkbox-<%= ques[i].id %>"
                             class="ml-2 text-sm text-gray-600 cursor-pointer">
                             <%= ques[i].question %>
                         </label>
+                        </div>
+                    <div>
                         <a href="##" class="invisible px-2 py-1 ml-2"></a>
                         <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
                             stroke="currentColor" class="w-4 h-4">
                             <path stroke-linecap="round" stroke-linejoin="round"
                                 d="M16.862 4.487l1.687-1.688a1.875 1.875 0 112.652 2.652L6.832 19.82a4.5 4.5 0 01-1.897 1.13l-2.685.8.8-2.685a4.5 4.5 0 011.13-1.897L16.863 4.487zm0 0L19.5 7.125" />
                         </svg>
+                    </div>
                         </a>
                         <div class="flex-auto">
                             <a href="#" class="hidden px-2 py-1 trash-icon ml-2">
