--- a/views/electionpreview.ejs
+++ b/views/electionpreview.ejs
@@ -17,7 +17,7 @@
         <a href="/elections/<%- eid %>/questions/new" class="underline text-purple-900 text-2xl hover:text-blue-300  text-3xl visited:text-purple-600">Create a question</a>
             </div>
             <div class="flex-none">
-                <%- include('electionlist.ejs', { title: "Elections which are created but not launched", ques:ques }) %>
+                <%- include('electionlist.ejs', { ques:ques }) %>
             </div>
         </div>
     </div>
