--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -12,7 +12,7 @@
 <body>
     <div class="grid grid-cols-6">
         <div class="col-start-3 col-span-2">
-            <h6 class="py-4">Signup as a new user</h6>
+            <h6 class="py-4">Signup as a new Admin</h6>
             <form action="/Admin" method="post">
                 <input type="hidden" name="_csrf" value="<%=csrfToken %>" />
                 <div class="py-3">
