--- a/views/electionlist.ejs
+++ b/views/electionlist.ejs
@@ -1,7 +1,7 @@
 <div class="grid grid-cols-6">
-    <div class="col-start-3 col-span-4">
-        <h5 class=" text-3xl">
-            Managing questions <span
+    <div class="col-start-2 col-span-5">
+        <h5 class="text-gray-800 text-3xl">
+            Ballot where a Admin can create questions for the election <span
                     class="bg-gray-100 text-gray-800 text-sm font-small mr-2 px-2.5 py-0.5 rounded dark:bg-gray-200 dark:text-gray-900 justify-center items-center items">
                     <%= ques.length %>
                 </span>
