--- a/views/electionpreview.ejs
+++ b/views/electionpreview.ejs
@@ -8,16 +8,17 @@
     <title>Online Voting Platform</title>
     <meta name="csrf-token" content="<%= csrfToken %>" />
     <script src="https://cdn.tailwindcss.com"></script>
+    
 </head>
 
 <body>
     <div class="grid grid-cols-6">
         <div class="col-start-3 col-span-2">
             <div class="flex-auto">
-        <a href="/elections/<%- eid %>/questions/new" class="underline text-purple-900 text-2xl hover:text-blue-300  text-3xl visited:text-purple-600">Create a question</a>
+        <a href="/elections/<%- elecid %>/questions/new" class="underline text-purple-900 text-2xl hover:text-blue-300  text-3xl visited:text-purple-600">Create a question</a>
             </div>
             <div class="flex-none">
-                <%- include('electionlist.ejs', { ques:ques }) %>
+                <%- include('question.ejs', { ques:ques }) %>
             </div>
         </div>
     </div>
