--- a/views/elections.ejs
+++ b/views/elections.ejs
@@ -6,15 +6,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Online Voting Platform</title>
-
     <meta name="csrf-token" content="<%= csrfToken %>" />
-
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
 
 <body>
     <div class="grid grid-cols-6">
-        <div class="col-start-1 col-span-5">
+        <div class="col-start-1 col-span-6">
             <h5>
                 <%= title %> <span
                         class="bg-gray-100 text-gray-800 text-sm font-small mr-2 px-2.5 py-0.5 rounded dark:bg-gray-200 dark:text-gray-900 justify-center items-center items">
@@ -29,15 +27,8 @@
                                 class="ml-2 text-sm text-gray-600 cursor-pointer">
                                 <%= data[i].name %>
                             </label>
-                            <a href="##" class="invisible px-2 py-1 ml-2"></a>
-                            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
-                                stroke="currentColor" class="w-4 h-4">
-                                <path stroke-linecap="round" stroke-linejoin="round"
-                                    d="M16.862 4.487l1.687-1.688a1.875 1.875 0 112.652 2.652L6.832 19.82a4.5 4.5 0 01-1.897 1.13l-2.685.8.8-2.685a4.5 4.5 0 011.13-1.897L16.863 4.487zm0 0L19.5 7.125" />
-                            </svg>
-                            </a>
                             <div class="flex-auto">
-                                <a href="#" onclick="deleteelec(<%= data[i].id %>)" class="hidden px-2 py-1 trash-icon ml-2">
+                                <a href="" onclick="deleteelec(<%= data[i].id %>)" class="hidden px-2 py-1 trash-icon ml-2">
                                         <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
                                             stroke-width="1.5" stroke="currentColor" class="w-4 h-4">
                                             <path stroke-linecap="round" stroke-linejoin="round"
@@ -47,9 +38,12 @@
                             </div>
                             <div class="flex-auto">
                                 <a href="/elections/<%= data[i].id %>/questions" class="  w-4 h-4  ml-2">
-                                    <button class="text-white bg-black  font-medium rounded px-5 py-2" >View</button>
+                                    <button class="text-white bg-black  font-medium rounded px-5 py-2" >Manage Questions</button>
                                 </a>
-                            </div>
+                                <a href="#" class="  w-4 h-4  ml-2">
+                                    <button class="text-white bg-black  font-medium rounded px-5 py-2" >Launch</button>
+                                </a>
+                            </div>           
                         </div>
                     </li>
 
