--- a/views/question.ejs
+++ b/views/question.ejs
@@ -14,7 +14,7 @@
                                 class="ml-2 text-sm text-gray-600 cursor-pointer">
                                 <%= ques[i].question %>
                             </label>
-                        <div class="flex-auto p-2">
+                        <div class="flex-auto">
                             <a href="##" class="hidden px-2 py-1 trash-icon ml-2"></a>
                             <svg xmlns="http://ww   w.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
                                 stroke-width="1.5" stroke="currentColor" class="w-4 h-4">
