added feature for deleting a question

--- a/views/options.ejs
+++ b/views/options.ejs
@@ -24,8 +24,8 @@
                         <%= data[i].optionname %>
                     </label>
                     <div class="flex-auto">
-                        <a href="#" onclick="deleteoption(<%= eid %>,<%= ques.id %>,<%= data[i].id %>)" class="w-4 h-4  ml-2">
-                            <button class="text-white bg-black  font-medium rounded px-5 py-2">Delete Option</button>
+                        <a href="#"  class="w-4 h-4  ml-2">
+                            <button  onclick="deleteoption(<%= eid %>,<%= ques.id %>,<%= data[i].id %>)" class="text-white bg-black  font-medium rounded px-5 py-2">Delete Option</button>
                         </a>
                         <a href="#" class="w-4 h-4  ml-2">
                             <button class="text-white bg-black  font-medium rounded px-5 py-2">Edit Option</button>
