--- a/views/elections.ejs
+++ b/views/elections.ejs
@@ -28,7 +28,7 @@
                                 <%= data[i].name %>
                             </label>
                             <div class="flex-auto">
-                                <a href="" onclick="deleteelec(<%= data[i].id %>)" class="hidden px-2 py-1 trash-icon ml-2">
+                                <a href=""  class="hidden px-2 py-1 trash-icon ml-2">
                                         <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
                                             stroke-width="1.5" stroke="currentColor" class="w-4 h-4">
                                             <path stroke-linecap="round" stroke-linejoin="round"
