--- a/views/voter.ejs
+++ b/views/voter.ejs
@@ -61,7 +61,7 @@
                                 <%= vo[i].VoterId %>
                             </label>
                             <div class="flex-auto">
-                                <a href="" onclick="deletevoter(<%= vo[i].ElectionId %>,<%= vo[i].id %>)" class="w-4 h-4  ml-2">
+                                <a href="" onclick="deletevoter(<%= vo[i].ElectionId %>,<%=  vo[i].Voterid %>)" class="w-4 h-4  ml-2">
                                     <button class="text-white bg-black  font-medium rounded px-5 py-2">Delete
                                         Voter</button>
                                 </a>
