Added launch election page and diplayed question of elections along with their options

--- a/views/votingpage.ejs
+++ b/views/votingpage.ejs
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-
+    <script src="https://cdn.tailwindcss.com"></script>
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -9,4 +9,4 @@
     <link href="./css/styles.css" rel="stylesheet">
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
-<body><p>Buliding voting page </p></body>
+<body align="center" ><h5 class="text-gray-800 text-3xl align ">Elections are live <a class="underline text-purple-900 text-4xl hover:text-blue-300  text-3xl visited:text-purple-600" href="/elections/<%= eid %>/live">Here</a> </h5></body>
